--- a/Hyprland/hyprland.conf
+++ b/Hyprland/hyprland.conf
@@ -57,12 +57,37 @@ decoration {
 	}
 }
 
-animation  = workspaces, 1, 6, default # Swapping through workspaces
-animation  = windows,    1, 6, default # 		  windows
-animation  = fade, 	0
 animations {
-	enabled 	    = true
-	workspace_wraparound = true
+    enabled = true
+
+    bezier  =    smoothOut, 0.16,   1,   0.3,  1
+    bezier  = 	 smoothIn, 0.25,   1,   0.5,  1
+    bezier  = easeOutQuint, 0.22,   1,   0.36, 1
+    bezier  =  easeOutExpo, 0.16,   1,   0.3,  1
+    bezier  = 	   linear, 0, 0,   1,     1
+    bezier  = 	     soft, 0.33, 0.9,  0.57,  1
+
+    animation =     windows, 1,   6,  easeOutExpo, popin 90%
+    animation =   windowsIn, 1,   6,  easeOutExpo, popin 90%
+    animation =  windowsOut, 1,   4,     smoothIn, popin 95%
+    animation = windowsMove, 1, 4.5, easeOutQuint, slide
+
+    animation =      border, 1,   5,   soft
+    animation = borderangle, 1, 100, linear, loop
+
+    animation =          fade, 1,   3, smoothIn
+    animation =       fadeDim, 1,   4, smoothIn
+    animation =    fadeSwitch, 1, 3.5, smoothIn
+    animation =    fadeShadow, 1, 3.5, smoothIn
+    animation =  fadeLayersIn, 1, 3.5, easeOutExpo
+    animation = fadeLayersOut, 1,   3, smoothIn
+
+    animation =       workspaces, 1, 6, easeOutExpo, slide
+    animation = specialWorkspace, 1, 5, easeOutExpo, slidevert
+
+    animation =    layers, 1, 4, easeOutExpo, popin 92%
+    animation =  layersIn, 1, 4, easeOutExpo, slide
+    animation = layersOut, 1, 3,    smoothIn, slide
 }
 
 input {
