--- a/Waybar/config.jsonc
+++ b/Waybar/config.jsonc
@@ -3,10 +3,12 @@
   "position": "top",
   "height": 45,
   "spacing": 0,
+  "margin-top": 6,
+  "margin-left": 6,
+  "margin-right": 6,
   "modules-left": [
     "hyprland/workspaces",
-    "clock",
-    "tray"
+    "clock"
   ],
   "modules-center": [
     "hyprland/window"
@@ -27,20 +29,19 @@
     "on-click": "activate",
     "persistent-workspaces": {
       "*": [
-        1,
-        2
+        1
       ]
     },
     "format-icons": {
-      "active": "󱓻"
+      "active": "●"
     }
   },
   "network": {
-    "format-wifi": "󰤨   {essid}",
-    "format-ethernet": "    Wired",
+    "format-wifi": "󰤨  {essid}",
+    "format-ethernet": "󰈀  Wired",
     "tooltip-format": "<span color='#FF1493'> 󰅧 </span>{bandwidthUpBytes}  <span color='#00BFFF'> 󰅢 </span>{bandwidthDownBytes}",
     "format-linked": "󱘖   {ifname} (No IP)",
-    "format-disconnected": "   Disconnected",
+    "format-disconnected": "   Offline",
     "format-alt": "󰤨   {signalStrength}%",
     "interval": 1
   },
@@ -65,11 +66,11 @@
     "tooltip": false
   },
   "memory": {
-    "format": "{used:0.1f}G of {total:0.1f}G",
+    "format": "󰍛  {used:0.1f}G of {total:0.1f}G",
     "tooltip": false
   },
   "cpu": {
-    "format": "   {usage}%",
+    "format": "󰔏 {usage}%",
     "tooltip": false
   },
   "clock": {
@@ -77,10 +78,6 @@
     "timezone": "Arizona/Phoenix",
     "format": "   {:%H:%M}",
     "tooltip": false
-  },
-  "tray": {
-    "icon-size": 17,
-    "spacing": 6
   },
   "backlight": {
     "device": "intel_backlight",
