Change my cursor and minor window details

--- a/Hyprland/hyprland.conf
+++ b/Hyprland/hyprland.conf
@@ -1,16 +1,16 @@
 # Environment Variables
 
-env = XCURSOR_THEME, Adwaita
-env = XCURSOR_SIZE, 24
+env =           XCURSOR_THEME, BreezeX-RosePine-Linux # See all available cursors: "ls /usr/share/icons"
+env =  	        XCURSOR_SIZE, 24
 env = WLR_NO_HARDWARE_CURSORS, 1
 
-# Sourcing/loading other files
+# Loading external configuration files
 
-source = ~/.config/hypr/binds.conf
+source  = ~/.config/hypr/binds.conf
 
 # Configuring Hyprland
 
-monitor = , preferred, auto, 1
+monitor = , preferred, auto, 1 # Recommended for portable devices, preferred manual monitor assignment
 
 exec-once = waybar
 exec-once = waypaper --restore
@@ -18,9 +18,9 @@ exec-once = hyprpaper
 
 # wiki.hyprland/Configuring/Variables
 general {
-	border_size = 2
+	border_size = 0  # Recommended: 0-2
 
-	gaps_in     = 6
+	gaps_in     = 3
 	gaps_out    = 12
 	float_gaps  = -1 # -1 = Default
 
@@ -37,23 +37,24 @@ general {
 }
 
 decoration {
-	rounding       = 10
-	rounding_power = 15.0
+	rounding       = 12
+	rounding_power = 2
 	
-	active_opacity     = 0.9
+	active_opacity     = 0.95
 	inactive_opacity   = 0.85
 	fullscreen_opacity = 1
 
 	blur {
 		enabled 	 = true
 		new_optimizations = true # Recommended: true
-		noise 		 = 0.1
+		noise 		 = 0.15
 		popups	 	 = true
 	}
 
 	shadow {
-		enabled = true
-		range   = 5
+		enabled      = true
+		range        = 5
+		render_power = 2
 	}
 }
 
@@ -61,11 +62,11 @@ animations {
     enabled = true
 
     bezier  =    smoothOut, 0.16,   1,   0.3,  1
-    bezier  = 	  smoothIn, 0.25,   1,   0.5,  1
+    bezier  = 	 smoothIn, 0.25,   1,   0.5,  1
     bezier  = easeOutQuint, 0.22,   1,   0.36, 1
     bezier  =  easeOutExpo, 0.16,   1,   0.3,  1
-    bezier  = 	    linear, 0, 0,   1,     1
-    bezier  = 	      soft, 0.33, 0.9,  0.57,  1
+    bezier  = 	   linear, 0, 0,   1,     1
+    bezier  = 	     soft, 0.33, 0.9,  0.57,  1
 
     animation =     windows, 1,   6,  easeOutExpo, popin 90%
     animation =   windowsIn, 1,   6,  easeOutExpo, popin 90%
