Use built in screenshot tools over Hyprshot

--- a/Hyprland/binds.conf
+++ b/Hyprland/binds.conf
@@ -1,4 +1,4 @@
-$WIN = SUPER	   # SUPER (Windows key)
+$WIN = SUPER	  # SUPER (Windows key)
 $SIN = SUPER_SHIFT # SUPER + SHIFT
 
 $LMB = mouse:272 # Left
@@ -44,7 +44,7 @@ bind = $SIN, mouse_down, workspace, e-1
 
 # Utility binds
 
-bind = $WIN, S, exec, hyprshot -m output
+bind = $WIN, S, exec, file=/tmp/screenshot-$(date +%s).png; grim "$file" && wl-copy < "$file" && notify-send -u normal -t 3000 -i "$file" ""
 bind = $SIN, S, exec, file="/tmp/screenshot-$(date +%s%N).png"; grim -g "$(slurp)" "$file" && wl-copy < "$file"
 
 bind = $SIN, W, exec, killall waybar ; waybar
