Add manual monitor management

--- a/Hyprland/hyprland.conf
+++ b/Hyprland/hyprland.conf
@@ -10,7 +10,10 @@ source  = ~/.config/hypr/binds.conf
 
 # Configuring Hyprland
 
-monitor = , preferred, auto, 1 # Recommended for portable devices, preferred manual monitor assignment
+# monitor = , preferred, auto, 1 # Recommended for portable devices, preferred manual monitor assignment
+
+monitor =   DP-1, 1920x1080@144,    0x0, 1 # Monitor 1 (Left)
+monitor = HDMI-1, 1920x1080@144, 1920x0, 1 # Monitor 2 (Right)
 
 exec-once = waybar
 exec-once = waypaper --restore
